# tagalong

./: .gitignore  CMakeLists.txt  README.md  icons.qrc
android/: AndroidManifest.xml
android/src/com/mggross/tagalong/: QtIntentActivity.java
assets/: tagalong.desktop
src/: android.cpp  android.hpp  audio.cpp  audio.hpp  backend.cpp  backend.hpp  main.cpp  settings.cpp  settings.hpp
src/barbershop/: api.cpp  api.hpp  tag.cpp  tag.hpp  tagcompletionsmodel.cpp  tagcompletionsmodel.hpp
src/qml/: BarbershopPage.qml  Main.qml  PdfViewer.qml  Piano.qml  SheetmusicView.qml
